--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,21 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme
 title: REXTECH Labs
-description: Rasmus Kirkeby & Frederik Strøm
+description: Advanced security systems.
+timezone: Etc/UTC
+
+sass:
+  style: compressed
+
+defaults:
+  - scope:
+      path: assets/img
+    values:
+      image: true
+
+exclude:
+  - README.md
+  - run.sh
+  - update.sh
+
+plugins:
+  - jekyll-sitemap
+  - jekyll-target-blank
